--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
             width: 100%;
             height: auto;
         }
-</style>
+    </style>
 </head>
 <body> 
-  <img src="DmitrijLyskowitsch.jpg">
+  <img src="DmitrijLyskowitsch.jpg" alt="Bild von Dmitrij Lyskowitsch">
 </body>
 </html>
