--- a/index.html
+++ b/index.html
@@ -9,9 +9,22 @@
             width: 100%;
             height: auto;
         }
+        .download-button {
+            display: inline-block;
+            margin-top: 20px;
+            padding: 10px 20px;
+            background-color: #4CAF50; /* Grüner Hintergrund */
+            color: white; /* Textfarbe */
+            text-decoration: none; /* Keine Unterstreichung */
+            border-radius: 5px; /* Abgerundete Ecken */
+        }
+        .download-button:hover {
+            background-color: #45a049; /* Dunklerer Grünton beim Hover */
+        }
     </style>
 </head>
 <body> 
   <img src="DmitrijLyskowitsch.jpg" alt="Bild von Dmitrij Lyskowitsch">
+     <a href="DmitrijLyskowitsch.jpg" download="DmitrijLyskowitsch.jpg" class="download-button">Bild herunterladen</a>
 </body>
 </html>
