--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
     </style>
 </head>
 <body> 
-  <img src="DmitrijLyskowitsch01.jpg" alt="Bild von Dmitrij Lyskowitsch">
+  <img src="DmitrijLyskowitsch_Trauer.jpg" alt="Bild von Dmitrij Lyskowitsch">
     <br>
   
   <div class="button-container">
-    <a href="DmitrijLyskowitsch01.jpg" download="DmitrijLyskowitsch.jpg" class="download-button">Bild herunterladen</a>
+    <a href="DmitrijLyskowitsch_Trauer.jpg" download="DmitrijLyskowitsch.jpg" class="download-button">Bild herunterladen</a>
   </div>
 </body>
 </html>
